# rag-learning-academy

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  RAG Learning Academy.code-workspace  README.md  pyproject.toml  requirements.txt
.beads/: metadata.json
.claude/: AGENT_TEMPLATE.md  LANGUAGE_AWARENESS.md  settings.json
.claude/agents/: architecture-director.md  chunking-strategist.md  curriculum-director.md  deployment-specialist.md  document-parser.md  embedding-lead.md  evaluation-lead.md  evaluation-specialist.md  graph-rag-specialist.md  hybrid-search-specialist.md  indexing-lead.md  integration-lead.md  metadata-specialist.md  multimodal-specialist.md  prompt-engineer.md  query-analyst.md  reranking-specialist.md  research-director.md  retrieval-lead.md  vector-db-specialist.md
.claude/hooks/: check-freshness.sh  check-references.sh  session-start.sh  session-stop.sh  track-progress.sh  validate-code.sh
.claude/rules/: chunking-code.md  embedding-code.md  evaluation-code.md  pipeline-code.md  prompt-templates.md  retrieval-code.md  vector-db-code.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  content_update.md  feature_request.md
.github/scripts/: weekly_knowledge_check.py
.github/workflows/: ci.yml  content-freshness.yml  weekly-knowledge-check.yml
scripts/: generate_dashboard.py
src/: __init__.py
tests/: academy_fixtures.py  conftest.py  test_chunking.py  test_content.py  test_cross_references.py  test_evaluation.py  test_hooks.py  test_pipeline.py  test_retrieval.py  test_structure.py
(+56 files in other folders)
