[project]
name = "rag-learning-academy"
version = "0.1.0"
description = "A multi-agent learning environment for mastering RAG"
requires-python = ">=3.10"
license = "MIT"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
